chore: fix layout issue

--- a/app/globals.css
+++ b/app/globals.css
@@ -18,6 +18,7 @@
 
 body {
   color: white;
+  overflow-x: hidden;
   background: linear-gradient(
       to bottom,
       transparent,
